                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.0

  *) [TS-1387] Allow proxy.config.http.insert_age_in_response to be overridden
    Author: Phil Sorber

  *) [TS-1392] Fix SNI certificate fallback path

  *) [TS-1385] generic atomic operations API

  *) [TS-1380] SSL wildcard lookup doesn't find the longest match

  *) [TS-1315] Fix URL parsing to handle non-HTTP schemes correctly.

  *) [TS-1322] CONNECT to parent proxy has URL with a trailing slash
    Author: Yakov Kopel

  *) [TS-1370] Restore original stale-wile-revalidate code for posterity
    Author: Phil Sorber

  *) [TS-1340] Improve IPv6 port example in records.comfig
    Author: Jan-Frode Myklebust

  *) [TS-1363] Cert path not working using intermdiate certificate

  *) [TS-895] Added version checks for bison and flex.

  *) [TS-1331] Wrong regex for ip in records config. Authors:
   Yakov Kopel and Uri Shachar.

  *) [TS-1348] Remove the active timeout when releasing or 
  binding server_session.

  *) [TS-1350] Detect and prefer LuaJIT

  *) [TS-538] Remove deprecated INKStats API

  *) [TS-1345] fix signed/unsigned compilation issues in Vec

  *) [TS-1343] Stat system doesn't check buffer sizes

  *) [TS-1342] Lua plugin initial hook support

  *) [TS-1314] Remove TS_ARG_MAX usage so that platforms with
  unlimited ARG_MAX can build correctly.

  *) [TS-1341] Remove remnants of TSCacheHookAdd() API.

  *) [TS-1328] TSMgmtIntCreate and TSMgmtStringCreate validation.
   Author: Yakov Kopel.

  *) [TS-1338] SSL not handling some events properly.

  *) [TS-1258] Need the ability to allow a user to alter the background fill
   config values on a per transaction basis. Author: Robert Logue.

  *) [TS-961] Add TSPortDescriptor API to support accepting connections with
   inbound transparency.

  *) [TS-1332] Silence spurious error when adding SSL certificates with
   alternate names.
